--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "autoprefixer": "^9.5.1",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.11.0",
     "babel-preset-latest": "^6.24.1",
@@ -19,9 +20,13 @@
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
+    "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-import": "^12.0.1",
@@ -42,5 +47,19 @@
     "react-dom": "^16.4.2",
     "react-router": "^4.3.0",
     "react-router-dom": "^4.3.0"
+  },
+  "server": {
+    "local": {
+      "host": "localhost",
+      "port": 8888
+    },
+    "api": {
+      "host": "",
+      "port": 8087
+    },
+    "mock": {
+      "host": "localhost",
+      "port": 8081
+    }
   }
 }
