--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config webpack.config.prod.js --colors --display-error-details",
-    "start": "webpack-dev-server --config webpack.config.dev.js --colors"
+    "package": "npm run build && gulp zip",
+    "start": "webpack-dev-server --config webpack.config.dev.js --colors",
+    "start:mock": "concurrently \"set NODE_ENV=mock&& npm start\" \"node ./mock/server.js\""
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
@@ -15,8 +17,10 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.11.0",
     "babel-preset-latest": "^6.24.1",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
@@ -24,6 +28,10 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
+    "gulp": "^3.9.0",
+    "gulp-batch-replace": "^0.0.0",
+    "gulp-sftp": "^0.1.5",
+    "gulp-zip": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
     "mockjs": "^1.0.1-beta3",
@@ -35,6 +43,7 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "url-loader": "^1.1.2",
+    "react-css-modules": "^4.7.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1",
