--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.11.0",
-    "babel-preset-latest": "^6.24.1",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -39,18 +41,21 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "react-css-modules": "^4.7.2",
+    "react-transform-hmr": "^1.0.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "url-loader": "^1.1.2",
-    "react-css-modules": "^4.7.2",
     "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1",
     "webpack-md5-hash": "^0.0.6",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "antd": "^3.16.6",
     "global": "^4.3.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
