--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "ferrell",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config webpack.config.prod.js --colors --display-error-details",
-    "package": "npm run build && gulp zip",
+    "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js --colors --display-error-details",
+    "package": "npm run build:prod && gulp zip",
     "start": "webpack-dev-server --config webpack.config.dev.js --colors",
     "start:mock": "concurrently \"set NODE_ENV=mock&& npm start\" \"node ./mock/server.js\""
   },
@@ -24,6 +24,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^2.0.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
@@ -46,9 +47,9 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
-    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1",
     "webpack-md5-hash": "^0.0.6",
