--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "precss": "^1.4.0",
     "react-css-modules": "^4.7.2",
     "react-transform-hmr": "^1.0.4",
     "sass-loader": "^7.1.0",
