添加打包时   不打包没有引用的css插件

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["latest", "react", "es2015", "stage-0"],
-    "plugins": []
+    "plugins": [["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]]
 }
