--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-react-transform": "^3.0.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-latest": "^6.24.1",
@@ -29,6 +30,7 @@
     "cssnano": "^4.1.10",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "gulp": "^3.9.0",
@@ -43,6 +45,8 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "precss": "^1.4.0",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "react-css-modules": "^4.7.2",
     "react-transform-hmr": "^1.0.4",
     "sass-loader": "^7.1.0",
@@ -58,6 +62,7 @@
   },
   "dependencies": {
     "antd": "^3.16.6",
+    "echarts": "^4.2.1",
     "global": "^4.3.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
