--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^2.0.1",
+    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
@@ -38,6 +40,7 @@
     "gulp-sftp": "^0.1.5",
     "gulp-zip": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "lazyload-loader": "^1.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.11.0",
@@ -64,8 +67,8 @@
     "antd": "^3.16.6",
     "echarts": "^4.2.1",
     "global": "^4.3.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-router": "^4.3.0",
     "react-router-dom": "^4.3.0"
   },
