--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "file-loader": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-batch-replace": "^0.0.0",
